--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
             <a href="#about" onclick="closeMenu()">About</a>
             <a href="#research" onclick="closeMenu()">Research</a>
             <a href="#photography" onclick="closeMenu()">Photography</a>
+            <a href="/blog/">Blog</a>
         </div>
     </nav>
 
