--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,22 @@
   <title>Ye | Admin</title>
 </head>
 <body>
-  <!-- 这里是 Netlify CMS 挂载点 -->
+  <!-- Netlify Identity widget，用来登录 / 注册 -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
+
+  <!-- Netlify CMS 主脚本 -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
 </html>
