--- a/index.html
+++ b/index.html
@@ -891,6 +891,20 @@
             if (e.key === 'ArrowRight') showNext();
         });
     </script>
-
+<!-- Netlify Identity widget: 让首页也能处理确认链接 -->
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", (user) => {
+      // 已经登录就不用处理
+      if (!user) {
+        // 登录成功后自动跳到 /admin
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 </body>
 </html>
