Add Fiction link to navbar

--- a/index.html
+++ b/index.html
@@ -599,12 +599,13 @@
         </button>
 
         <div class="nav-links" id="navLinks">
-            <a href="#home" onclick="closeMenu()">Home</a>
-            <a href="#about" onclick="closeMenu()">About</a>
-            <a href="#research" onclick="closeMenu()">Research</a>
-            <a href="#photography" onclick="closeMenu()">Photography</a>
-            <a href="/blog/">Blog</a>
-        </div>
+    <a href="#home" onclick="closeMenu()">Home</a>
+    <a href="#about" onclick="closeMenu()">About</a>
+    <a href="#research" onclick="closeMenu()">Research</a>
+    <a href="#photography" onclick="closeMenu()">Photography</a>
+    <a href="/fiction/" onclick="closeMenu()">Fiction</a>  <!-- 新增这一行 -->
+    <a href="/blog/" onclick="closeMenu()">Blog</a>
+</div>
     </nav>
 
     <div id="home" class="hero">
