--- a/fiction/index.html
+++ b/fiction/index.html
@@ -1,74 +1,178 @@
 ---
-title: 小说列表
+pagination: false
 ---
 
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>小说 | Ye</title>
+  <meta charset="utf-8">
+  <title>小说列表 | Ye</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
+    :root {
+      color-scheme: dark;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      padding: 3rem 8%;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",system-ui;
-      background: #05060a;
+      font-family: -apple-system, BlinkMacSystemFont, system-ui, "SF Pro Text",
+        "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #111827 0, #020617 55%);
       color: #f9fafb;
     }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
+
+    .fiction-list-page {
+      min-height: 100vh;
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 32px 20px 56px;
     }
-    .desc {
+
+    .fiction-list-header {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 24px;
+    }
+
+    .fiction-list-back {
+      font-size: 14px;
+      color: #a5b4fc;
+      text-decoration: none;
+    }
+
+    .fiction-list-back:hover {
+      text-decoration: underline;
+    }
+
+    .fiction-list-title {
+      font-size: 26px;
+      font-weight: 650;
+    }
+
+    .fiction-list-subtitle {
+      font-size: 13px;
       color: #9ca3af;
-      margin-bottom: 2rem;
     }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+
+    .fiction-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px;
+      margin-top: 12px;
     }
-    li + li {
-      margin-top: 1rem;
+
+    .fiction-card {
+      background: rgba(15, 23, 42, 0.96);
+      border-radius: 20px;
+      overflow: hidden;
+      border: 1px solid rgba(148, 163, 253, 0.18);
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
+      transition: transform 0.22s ease, box-shadow 0.22s ease,
+        border-color 0.22s ease;
     }
-    a {
-      color: #9fb5ff;
+
+    .fiction-card:hover {
+      transform: translateY(-4px);
+      border-color: rgba(129, 140, 248, 1);
+      box-shadow: 0 24px 60px rgba(15, 23, 42, 0.9);
+    }
+
+    .fiction-card a {
+      color: inherit;
       text-decoration: none;
+      display: block;
+      height: 100%;
     }
-    a:hover {
-      text-decoration: underline;
+
+    .fiction-card-cover {
+      position: relative;
+      padding-top: 62%;
+      background: #020617;
+      overflow: hidden;
     }
-    .date {
-      font-size: 0.85rem;
-      color: #6b7280;
-      margin-left: 0.5rem;
+
+    .fiction-card-cover img {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
-    .back {
-      display: inline-block;
-      margin-bottom: 1.5rem;
-      font-size: 0.9rem;
-      color: #9fb5ff;
-      text-decoration: none;
+
+    .fiction-card-body {
+      padding: 16px 16px 18px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
     }
-    .back:hover {
-      text-decoration: underline;
+
+    .fiction-card-title {
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    .fiction-card-meta {
+      font-size: 12px;
+      color: #9ca3af;
+    }
+
+    .fiction-card-excerpt {
+      font-size: 13px;
+      color: #e5e7eb;
+      line-height: 1.7;
+    }
+
+    @media (max-width: 640px) {
+      .fiction-list-page {
+        padding-top: 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <a href="/" class="back">← 回到主页</a>
+  <main class="fiction-list-page">
+    <header class="fiction-list-header">
+      <a href="/" class="fiction-list-back">← 返回主页</a>
+      <h1 class="fiction-list-title">小说列表</h1>
+      <p class="fiction-list-subtitle">
+        这里是你正在写的短篇 / 场景，按时间倒序排列。
+      </p>
+    </header>
 
-  <h1>小说列表</h1>
-  <p class="desc">这里是我写的小说场景，会慢慢一点点补充。</p>
+    <section class="fiction-grid">
+      {# 按时间倒序：最新的在前面 #}
+      {% for post in collections.fiction | reverse %}
+        <article class="fiction-card">
+          <a href="{{ post.url }}">
+            {% if post.data.cover %}
+              <div class="fiction-card-cover">
+                <img src="{{ post.data.cover }}" alt="{{ post.data.title | escape }}" loading="lazy">
+              </div>
+            {% endif %}
 
-  <ul>
-    {%- for post in collections.fiction | reverse -%}
-      <li>
-        <a href="{{ post.url }}">{{ post.data.title }}</a>
-        <span class="date">{{ post.date | date }}</span>
-      </li>
-    {%- endfor -%}
-  </ul>
+            <div class="fiction-card-body">
+              <div class="fiction-card-title">{{ post.data.title }}</div>
+              <div class="fiction-card-meta">
+                {{ post.date | date("yyyy-MM-dd") }}
+              </div>
+
+              {% if post.data.excerpt %}
+                <p class="fiction-card-excerpt">
+                  {{ post.data.excerpt }}
+                </p>
+              {% endif %}
+            </div>
+          </a>
+        </article>
+      {% endfor %}
+    </section>
+  </main>
 </body>
 </html>
