--- a/fiction/index.html
+++ b/fiction/index.html
@@ -1,176 +1,148 @@
----
-pagination: false
----
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>小说列表 | Ye</title>
+  <title>Fiction | Ye</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    :root {
-      color-scheme: dark;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
+    :root { color-scheme: dark; }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, system-ui, "SF Pro Text",
         "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #111827 0, #020617 55%);
+      background: radial-gradient(circle at top, #111827 0, #020617 60%);
       color: #f9fafb;
     }
 
-    .fiction-list-page {
+    .page {
       min-height: 100vh;
-      max-width: 960px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 32px 20px 56px;
+      padding: 32px 20px 48px;
     }
 
-    .fiction-list-header {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
+    .page-header {
       margin-bottom: 24px;
     }
 
-    .fiction-list-back {
+    .back-link {
       font-size: 14px;
       color: #a5b4fc;
       text-decoration: none;
     }
+    .back-link:hover { text-decoration: underline; }
 
-    .fiction-list-back:hover {
-      text-decoration: underline;
-    }
-
-    .fiction-list-title {
-      font-size: 26px;
+    .title {
+      margin: 10px 0 6px;
+      font-size: 28px;
       font-weight: 650;
     }
 
-    .fiction-list-subtitle {
+    .subtitle {
       font-size: 13px;
       color: #9ca3af;
     }
 
-    .fiction-grid {
+    .grid {
+      margin-top: 28px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 20px;
-      margin-top: 12px;
+      gap: 18px;
     }
 
-    .fiction-card {
-      background: rgba(15, 23, 42, 0.96);
-      border-radius: 20px;
-      overflow: hidden;
-      border: 1px solid rgba(148, 163, 253, 0.18);
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-      transition: transform 0.22s ease, box-shadow 0.22s ease,
-        border-color 0.22s ease;
-    }
-
-    .fiction-card:hover {
-      transform: translateY(-4px);
-      border-color: rgba(129, 140, 248, 1);
-      box-shadow: 0 24px 60px rgba(15, 23, 42, 0.9);
-    }
-
-    .fiction-card a {
-      color: inherit;
-      text-decoration: none;
+    .card {
       display: block;
-      height: 100%;
+      background: rgba(15, 23, 42, 0.95);
+      border-radius: 18px;
+      padding: 16px 16px 18px;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      text-decoration: none;
+      color: inherit;
+      box-shadow: 0 16px 30px rgba(0, 0, 0, 0.55);
+      transition: transform 0.18s ease, box-shadow 0.18s ease,
+        border-color 0.18s ease;
     }
 
-    .fiction-card-cover {
-      position: relative;
-      padding-top: 62%;
-      background: #020617;
+    .card:hover {
+      transform: translateY(-4px);
+      border-color: #a5b4fc;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
+    }
+
+    .card-cover {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      border-radius: 14px;
       overflow: hidden;
+      margin-bottom: 12px;
+      background: #020617;
     }
 
-    .fiction-card-cover img {
-      position: absolute;
-      inset: 0;
+    .card-cover img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
     }
 
-    .fiction-card-body {
-      padding: 16px 16px 18px;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-
-    .fiction-card-title {
-      font-size: 18px;
+    .card-title {
+      font-size: 17px;
       font-weight: 600;
+      margin: 4px 0 4px;
     }
 
-    .fiction-card-meta {
+    .card-meta {
       font-size: 12px;
       color: #9ca3af;
+      margin-bottom: 6px;
     }
 
-    .fiction-card-excerpt {
+    .card-summary {
       font-size: 13px;
       color: #e5e7eb;
-      line-height: 1.7;
+      line-height: 1.6;
     }
 
     @media (max-width: 640px) {
-      .fiction-list-page {
-        padding-top: 20px;
-      }
+      .title { font-size: 24px; }
     }
   </style>
 </head>
 <body>
-  <main class="fiction-list-page">
-    <header class="fiction-list-header">
-      <a href="/" class="fiction-list-back">← 返回主页</a>
-      <h1 class="fiction-list-title">小说列表</h1>
-      <p class="fiction-list-subtitle">
-        这里是你正在写的短篇 / 场景，按时间倒序排列。
-      </p>
+  <main class="page">
+    <header class="page-header">
+      <a href="/" class="back-link">← 回到首页</a>
+      <h1 class="title">Fiction</h1>
+      <p class="subtitle">一些慢慢写着的故事。</p>
     </header>
 
-    <section class="fiction-grid">
-      {# 按时间倒序：最新的在前面 #}
-      {% for post in collections.fiction | reverse %}
-        <article class="fiction-card">
-          <a href="{{ post.url }}">
-            {% if post.data.cover %}
-              <div class="fiction-card-cover">
-                <img src="{{ post.data.cover }}" alt="{{ post.data.title | escape }}" loading="lazy">
-              </div>
-            {% endif %}
-
-            <div class="fiction-card-body">
-              <div class="fiction-card-title">{{ post.data.title }}</div>
-              <div class="fiction-card-meta">
-                {{ post.date | date("yyyy-MM-dd") }}
-              </div>
-
-              {% if post.data.excerpt %}
-                <p class="fiction-card-excerpt">
-                  {{ post.data.excerpt }}
-                </p>
-              {% endif %}
+    <section class="grid">
+      {% for story in collections.fiction | reverse %}
+        <a class="card" href="{{ story.url }}">
+          {% if story.data.cover %}
+            <div class="card-cover">
+              <img src="{{ story.data.cover }}" alt="{{ story.data.title }}">
             </div>
-          </a>
-        </article>
+          {% endif %}
+
+          <h2 class="card-title">
+            {{ story.data.title }}
+          </h2>
+
+          <p class="card-meta">
+            {{ story.date | date("yyyy-MM-dd") }}
+            {% if story.data.tagline %} · {{ story.data.tagline }}{% endif %}
+          </p>
+
+          {% if story.data.summary %}
+            <p class="card-summary">
+              {{ story.data.summary }}
+            </p>
+          {% endif %}
+        </a>
       {% endfor %}
     </section>
   </main>
