--- a/fiction/index.html
+++ b/fiction/index.html
@@ -1,8 +1,6 @@
 ---
-layout: null
 title: Fiction
 ---
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -11,195 +9,190 @@ title: Fiction
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    :root {
-      color-scheme: dark;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
+    :root { color-scheme: dark; }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, system-ui, "SF Pro Text",
         "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #020617 0, #020617 45%, #000000 100%);
-      color: #e5e7eb;
+      background: radial-gradient(circle at top, #222b45 0, #050814 55%);
+      color: #f5f5f5;
     }
 
-    .page-shell {
+    .page {
       min-height: 100vh;
-      max-width: 1024px;
+      max-width: 1080px;
       margin: 0 auto;
-      padding: 32px 20px 56px;
+      padding: 32px 20px 48px;
     }
 
-    .page-header {
-      margin-bottom: 28px;
+    .header {
+      margin-bottom: 24px;
     }
 
-    .page-back {
+    .back-link {
       font-size: 14px;
-      color: #a5b4fc;
+      color: #aab3ff;
       text-decoration: none;
     }
-    .page-back:hover {
-      text-decoration: underline;
-    }
+    .back-link:hover { text-decoration: underline; }
 
-    .page-title {
-      margin: 10px 0 4px;
-      font-size: 28px;
+    .title {
+      margin: 8px 0 4px;
+      font-size: 30px;
       font-weight: 650;
     }
 
-    .page-sub {
-      font-size: 13px;
+    .subtitle {
+      margin: 0;
+      font-size: 14px;
       color: #9ca3af;
     }
 
-    .card-grid {
+    .grid {
       margin-top: 28px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 20px;
     }
 
-    .fiction-card {
+    .card {
+      border-radius: 20px;
+      overflow: hidden;
+      background: rgba(9, 12, 28, 0.96);
+      box-shadow: 0 20px 40px rgba(0,0,0,.6);
+    }
+
+    .card-link {
+      color: inherit;
+      text-decoration: none;
       display: flex;
       flex-direction: column;
-      border-radius: 18px;
-      overflow: hidden;
-      text-decoration: none;
-      background: radial-gradient(circle at top left,
-        rgba(148, 163, 253, 0.18),
-        rgba(15, 23, 42, 0.98)
-      );
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
-      border: 1px solid rgba(148, 163, 253, 0.2);
-      transition: transform 0.18s ease, box-shadow 0.18s ease,
-                  border-color 0.18s ease, background 0.18s ease;
+      height: 100%;
     }
 
-    .fiction-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 24px 55px rgba(0, 0, 0, 0.8);
-      border-color: rgba(196, 181, 253, 0.9);
-      background: radial-gradient(circle at top left,
-        rgba(196, 181, 253, 0.24),
-        rgba(15, 23, 42, 1)
-      );
-    }
-
-    .card-cover {
+    .card-thumb {
       position: relative;
-      aspect-ratio: 16 / 9;
-      overflow: hidden;
-      background: #020617;
+      padding-top: 66%;
+      background: radial-gradient(circle at top, #4f46e5, #020617);
     }
 
-    .card-cover img {
+    .card-thumb img {
+      position: absolute;
+      inset: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
-      transition: transform 0.4s ease;
     }
 
-    .fiction-card:hover .card-cover img {
-      transform: scale(1.05);
+    .card-thumb-placeholder {
+      position: absolute;
+      inset: 0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size: 40px;
+      font-weight: 700;
+      color:#e5e7eb;
     }
 
     .card-body {
-      padding: 16px 18px 18px;
+      padding: 14px 16px 16px;
       display: flex;
       flex-direction: column;
       gap: 6px;
+      height: 100%;
     }
 
     .card-title {
-      font-size: 17px;
-      font-weight: 600;
-      color: #f9fafb;
       margin: 0;
+      font-size: 18px;
+      font-weight: 600;
     }
 
     .card-meta {
+      margin: 0;
       font-size: 12px;
       color: #9ca3af;
-      margin: 0;
     }
 
     .card-tagline {
+      margin: 4px 0 0;
       font-size: 13px;
-      color: #cbd5f5;
-      margin-top: 6px;
+      color: #e5e7eb;
+      opacity: .92;
     }
 
-    .card-excerpt {
-      font-size: 13px;
-      color: #d1d5db;
+    .card-tags {
       margin-top: 6px;
-      line-height: 1.6;
+      display:flex;
+      flex-wrap:wrap;
+      gap:6px;
     }
 
-    .card-footer {
+    .card-tag {
+      padding: 2px 8px;
+      border-radius:999px;
+      font-size:11px;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      background:rgba(148,163,253,.2);
+      color:#c7d2fe;
+    }
+
+    .card-readmore {
       margin-top: 10px;
-      font-size: 11px;
-      color: #a5b4fc;
-      opacity: 0.85;
-    }
-
-    @media (max-width: 640px) {
-      .page-shell {
-        padding: 24px 14px 40px;
-      }
-      .page-title {
-        font-size: 24px;
-      }
+      font-size: 12px;
+      color:#a5b4fc;
     }
   </style>
 </head>
 <body>
-  <main class="page-shell">
-    <header class="page-header">
-      <a href="/" class="page-back">← 回到主页</a>
-      <h1 class="page-title">Fiction</h1>
-      <p class="page-sub">一些正在写的故事。</p>
+  <main class="page">
+    <header class="header">
+      <a href="/" class="back-link">← 返回主页</a>
+      <h1 class="title">Fiction</h1>
+      <p class="subtitle">一些正在生长的故事。</p>
     </header>
 
-    <section class="card-grid">
-      {%- assign stories = collections.fiction | reverse -%}
-      {%- for story in stories -%}
-        <a href="{{ story.url }}" class="fiction-card">
-          {%- if story.data.cover -%}
-          <div class="card-cover">
-            <img src="{{ story.data.cover }}" alt="{{ story.data.title }} 封面">
+    <section class="grid">
+      {% assign stories = collections.fiction | reverse %}
+      {% for story in stories %}
+      <article class="card">
+        <a class="card-link" href="{{ story.url }}">
+          <div class="card-thumb">
+            {% if story.data.cover %}
+              <img src="{{ story.data.cover }}" alt="{{ story.data.title }} 封面图">
+            {% else %}
+              <div class="card-thumb-placeholder">
+                {{ story.data.title | slice: 0, 1 }}
+              </div>
+            {% endif %}
           </div>
-          {%- endif -%}
-
           <div class="card-body">
             <h2 class="card-title">{{ story.data.title }}</h2>
-
             <p class="card-meta">
-              {{ story.date | date: "%Y-%m-%d" }}
-              {%- if story.data.tagline -%}
-                · {{ story.data.tagline }}
-              {%- endif -%}
+              {{ story.date | date: "yyyy-MM-dd" }}
             </p>
 
-            {%- if story.data.excerpt -%}
-              <p class="card-excerpt">
-                {{ story.data.excerpt }}
-              </p>
-            {%- endif -%}
+            {% if story.data.excerpt %}
+              <p class="card-tagline">{{ story.data.excerpt }}</p>
+            {% endif %}
 
-            <div class="card-footer">
-              点击进入阅读 →
-            </div>
+            {% if story.data.tags %}
+              <div class="card-tags">
+                {% for tag in story.data.tags %}
+                  <span class="card-tag">{{ tag }}</span>
+                {% endfor %}
+              </div>
+            {% endif %}
+
+            <p class="card-readmore">点击进入阅读 →</p>
           </div>
         </a>
-      {%- endfor -%}
+      </article>
+      {% endfor %}
     </section>
   </main>
 </body>
