--- a/fiction/index.html
+++ b/fiction/index.html
@@ -180,10 +180,10 @@ layout: null
         <div class="fiction-card-body">
           <div class="fiction-tag-pill">FICTION</div>
           <h2 class="fiction-card-title">{{ story.data.title }}</h2>
-          <p class="fiction-card-meta">
-            {{ story.date | date("yyyy-MM-dd") }}
-            {% if story.data.excerpt %} · {{ story.data.excerpt }}{% endif %}
-          </p>
+         <p class="fiction-card-meta">
+  {{ story.date | date: "yyyy-MM-dd" }}
+  {% if story.data.excerpt %} · {{ story.data.excerpt }}{% endif %}
+</p>
           <a class="fiction-card-link" href="{{ story.url }}">
             点击进入阅读 →
           </a>
