--- a/fiction/index.html
+++ b/fiction/index.html
@@ -1,5 +1,5 @@
 ---
-title: Fiction
+title: "Fiction"
 layout: null
 ---
 
@@ -19,7 +19,6 @@ layout: null
       box-sizing: border-box;
     }
 
-    /* 和小说正文页统一的背景 */
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, system-ui, "SF Pro Text",
@@ -29,24 +28,6 @@ layout: null
         radial-gradient(circle at 80% 100%, rgba(56, 189, 248, 0.18) 0, transparent 60%),
         radial-gradient(circle at top, #111827 0, #020617 55%);
       color: #f5f5f5;
-    }
-
-    /* 页面淡入动画（和正文页一致） */
-    .page-fade {
-      animation: pageFadeIn 650ms ease-out both;
-    }
-
-    @keyframes pageFadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(8px);
-        filter: blur(2px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-        filter: blur(0);
-      }
     }
 
     .fiction-list-page {
@@ -97,6 +78,8 @@ layout: null
       display: flex;
       flex-direction: column;
       min-height: 220px;
+      text-decoration: none;
+      color: inherit;
     }
 
     .fiction-card-cover {
@@ -160,7 +143,7 @@ layout: null
   </style>
 </head>
 <body>
-  <main class="fiction-list-page page-fade">
+  <main class="fiction-list-page">
     <header class="fiction-list-header">
       <a href="/" class="fiction-list-back">← 返回首页</a>
       <h1 class="fiction-list-title">Fiction</h1>
@@ -168,27 +151,26 @@ layout: null
     </header>
 
     <section class="fiction-grid">
-      {% comment %} 按时间倒序浏览小说集合 {% endcomment %}
       {% for story in collections.fiction | reverse %}
-      <article class="fiction-card">
-        {% if story.data.cover %}
-        <div class="fiction-card-cover">
-          <img src="{{ story.data.cover }}" alt="{{ story.data.title }} 封面">
-        </div>
-        {% endif %}
+        <a class="fiction-card" href="{{ story.url }}">
+          {% if story.data.cover %}
+          <div class="fiction-card-cover">
+            <img src="{{ story.data.cover }}" alt="{{ story.data.title }} 封面">
+          </div>
+          {% endif %}
 
-        <div class="fiction-card-body">
-          <div class="fiction-tag-pill">FICTION</div>
-          <h2 class="fiction-card-title">{{ story.data.title }}</h2>
-          <p class="fiction-card-meta">
-            {{ story.date | date: "yyyy-MM-dd" }}
-            {% if story.data.excerpt %} · {{ story.data.excerpt }}{% endif %}
-          </p>
-          <a class="fiction-card-link" href="{{ story.url }}">
-            点击进入阅读 →
-          </a>
-        </div>
-      </article>
+          <div class="fiction-card-body">
+            <div class="fiction-tag-pill">FICTION</div>
+            <h2 class="fiction-card-title">{{ story.data.title }}</h2>
+            <p class="fiction-card-meta">
+              {{ story.date | date("yyyy-MM-dd") }}
+              {% if story.data.excerpt %} · {{ story.data.excerpt }}{% endif %}
+            </p>
+            <span class="fiction-card-link">
+              点击进入阅读 →
+            </span>
+          </div>
+        </a>
       {% endfor %}
     </section>
   </main>
